# cmd/kim-api/main.go
@@ -18,6 +18,7 @@ import (
 	"github.com/kvm-infrastructure-manager/kvm-infrastructure-manager/internal/northbound/availabilitypolicy"
 	"github.com/kvm-infrastructure-manager/kvm-infrastructure-manager/internal/northbound/flavor"
 	"github.com/kvm-infrastructure-manager/kvm-infrastructure-manager/internal/northbound/httpapi"
+	imageapi "github.com/kvm-infrastructure-manager/kvm-infrastructure-manager/internal/northbound/image"
 	"github.com/kvm-infrastructure-manager/kvm-infrastructure-manager/internal/northbound/project"
 	"github.com/kvm-infrastructure-manager/kvm-infrastructure-manager/internal/persistence/postgres"
 )
@@ -65,6 +66,7 @@ func run(args []string, stdout, stderr io.Writer) int {
 	store := postgres.NorthboundProjectStore{DB: pool}
 	flavorStore := postgres.NorthboundFlavorStore{DB: pool}
 	availabilityPolicyStore := postgres.NorthboundAvailabilityPolicyStore{DB: pool}
+	imageStore := postgres.NorthboundImageStore{DB: pool}
 	if err := store.Ready(ctx); err != nil {
 		fmt.Fprintf(stderr, "kim-api readiness error: %v\n", err)
 		return 1
@@ -75,7 +77,7 @@ func run(args []string, stdout, stderr io.Writer) int {
 		return 1
 	}
 	defer listener.Close()
-	handler := httpapi.Server{Projects: project.Service{Store: store}, Flavors: flavor.Service{Store: flavorStore}, AvailabilityPolicies: availabilitypolicy.Service{Store: availabilityPolicyStore}, Authenticator: verifier, Logger: stderr, RequestTimeout: *requestTimeout}.Handler()
+	handler := httpapi.Server{Projects: project.Service{Store: store}, Flavors: flavor.Service{Store: flavorStore}, AvailabilityPolicies: availabilitypolicy.Service{Store: availabilityPolicyStore}, Images: imageapi.Service{Store: imageStore}, Authenticator: verifier, Logger: stderr, RequestTimeout: *requestTimeout}.Handler()
 	server := &http.Server{Handler: handler, ReadHeaderTimeout: 5 * time.Second, IdleTimeout: 60 * time.Second, MaxHeaderBytes: 32 << 10}
 	errorsFound := make(chan error, 1)
 	go func() {
